--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,11 +21,12 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u annecarvalho --password-stdin
 
-      
       - name: build image and push to docker hub
         uses: docker/build-push-action@v1.1.0
         with:
           context: ${{ matrix.image_repository }}
           repository: ${{ matrix.image_repository }}
-          tags: ${{ github.sha }}, latest     
+          tags: |
+            ${{ github.sha }}
+            latest  
 
