--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -24,9 +24,9 @@ jobs:
       - name: build image and push to docker hub
         uses: docker/build-push-action@v1.1.0
         with:
-          context: ${{ matrix.image_repository }}
+          username: annecarvalho
+          password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ matrix.image_repository }}
-          tags: |
-            ${{ github.sha }}
-            latest  
+          tags: ${{ github.sha }}, latest
+          path: ${{ matrix.image_repository }}
 
