--- a/k8s/config_map.yaml
+++ b/k8s/config_map.yaml
@@ -3,5 +3,6 @@ kind: ConfigMap
 metadata:
   name: configmap
 data:
-  image-tag: v1.0.0
-  dataset-location: home/annecarvalho/project2-pv/shared
+  dataset1-location: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_ds1.csv"
+  dataset2-location: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_ds2.csv"
+  datasetsongs-location: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_songs.csv"
