--- a/k8s/argocd.yaml
+++ b/k8s/argocd.yaml
@@ -10,7 +10,7 @@ spec:
     path: ./k8s
   destination:
     server: https://kubernetes.default.svc
-    namespace: cannecarvalho
+    namespace: annecarvalho
   syncPolicy:
     automated:
       prune: true
