--- a/annecarvalho/app_api/Dockerfile
+++ b/annecarvalho/app_api/Dockerfile
@@ -11,4 +11,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 32168
 
-CMD ["python3", "main.py", "--host", "0.0.0.0", "--port", "32168"]
+CMD ["python3", "main.py"]
