--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -45,7 +45,7 @@ spec:
           name: config-map
       - name: storage-annecarvalho
         persistentVolumeClaim:
-          claimName: project2-pv-annecarvalho
+          claimName: project2-pvc-annecarvalho
 
 ---
 
@@ -75,18 +75,28 @@ spec:
             - name: storage-annecarvalho
               mountPath: /modelo
           env:
-            - name: dev-dataset_path
+            - name: dev-dataset1-path
               valueFrom:
                 configMapKeyRef:
                   name: config-map
-                  key: dataset-location
+                  key: dataset1-location
+            - name: dev-dataset2-path
+              valueFrom:
+                configMapKeyRef:
+                  name: config-map
+                  key: dataset2-location
+            - name: dev-datasetsongs-path
+              valueFrom:
+                configMapKeyRef:
+                  name: config-map
+                  key: datasetsongs-location
       volumes:
       - name: config-annecarvalho
         configMap:
           name: config-map
       - name: storage-annecarvalho
         persistentVolumeClaim:
-          claimName: project2-pv-annecarvalho
+          claimName: project2-pvc-annecarvalho
 
 # ---
 
