--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- config-map.yaml
 - deployment.yaml
 - service.yaml
-- config_map.yaml
 
 namespace: playlist-recommender
 
