--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - deployment.yaml
 - service.yaml
 
-namespace: playlist-recommender
+namespace: playlist-recommender-annecarvalho
 
 
 images:
