Revert "ajuste tag"
This reverts commit b5a8dabc516610f4d274b44630ed5beac212056e.

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -29,8 +29,7 @@ jobs:
           username: annecarvalho
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ matrix.image_repository }}
-          tags: |
-            ${{ github.event.release.tag_name }},latest
+          tags: ${{ github.event.release.tag_name }}, latest
           path: ${{ matrix.image_repository }}
 
   deploy:
