--- a/k8s/config-map.yaml
+++ b/k8s/config-map.yaml
@@ -7,3 +7,4 @@ data:
   dataset1-location: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_ds1.csv"
   dataset2-location: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_ds2.csv"
   datasetsongs-location: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_songs.csv"
+  versao: "v1.0.0"
