mudanças image_tag

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,8 +24,11 @@ spec:
             - name: storage-annecarvalho
               mountPath: /modelo
           env:
-          - name: versao
-            value: v1.0
+          - name: dev-image-tag
+            valueFrom:
+              configMapKeyRef:
+                name: config-map
+                key: versao
           - name: dev-dataset1-path
             valueFrom:
               configMapKeyRef:
