--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -57,6 +57,8 @@ jobs:
         run: |
           cd k8s
           sed -i 's/versao: .*/versao: ${{ github.sha }}/g' config-map.yaml
+          echo ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
+          echo ${{ github.event.release.tag_name }}
 
       - name: commit
         run: |
